// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should work with invert 1`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "",
    },
    "children": Array [
      Node {
        "data": "success",
        "next": Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid transparent;
          background-color: #0070f3;
          color: #fff;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
      Node {
        "attribs": Object {},
        "children": Array [
          Node {
            "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid transparent;
          background-color: #0070f3;
          color: #fff;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "style",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Node {
          "data": "success",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
        "type": "style",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tag should work with types 1`] = `
initialize {
  "0": Node {
    "attribs": Object {},
    "children": Array [
      Node {
        "attribs": Object {
          "class": "",
        },
        "children": Array [
          Node {
            "data": "success",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "success",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "data": "secondary",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "secondary",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Node {
            "attribs": Object {
              "class": "",
            },
            "children": Array [
              Node {
                "data": "error",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "error",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": Node {
              "attribs": Object {
                "class": "",
              },
              "children": Array [
                Node {
                  "data": "dark",
                  "next": Node {
                    "attribs": Object {},
                    "children": Array [
                      Node {
                        "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "style",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "style",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": Node {
                    "data": "dark",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "",
        },
        "children": Array [
          Node {
            "data": "secondary",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "secondary",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "data": "error",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "error",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Node {
            "attribs": Object {
              "class": "",
            },
            "children": Array [
              Node {
                "data": "dark",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "dark",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "data": "success",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "success",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "",
        },
        "children": Array [
          Node {
            "data": "error",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "error",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "data": "dark",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "dark",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "data": "secondary",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "secondary",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Node {
            "attribs": Object {
              "class": "",
            },
            "children": Array [
              Node {
                "data": "success",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "success",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "",
        },
        "children": Array [
          Node {
            "data": "dark",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #000;
          background-color: #fff;
          color: #000;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "dark",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "data": "error",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #e00;
          background-color: #fff;
          color: #e00;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "error",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Node {
            "attribs": Object {
              "class": "",
            },
            "children": Array [
              Node {
                "data": "secondary",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #666;
          background-color: #fff;
          color: #666;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "secondary",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": Node {
              "attribs": Object {
                "class": "",
              },
              "children": Array [
                Node {
                  "data": "success",
                  "next": Node {
                    "attribs": Object {},
                    "children": Array [
                      Node {
                        "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "style",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "style",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        span {
          display: inline-block;
          line-height: 0.875rem;
          font-size: 0.875rem;
          height: 1.75rem;
          border-radius: 5px;
          border: 1px solid #0070f3;
          background-color: #fff;
          color: #0070f3;
          padding: 6px;
          box-sizing: border-box;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": Node {
                    "data": "success",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {},
    "x-attribsPrefix": Object {},
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
